Make space typed manually every time after "Magus Mabus" and fix header not showing up error.

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
 #header-title{
     font-family: 'Special Elite';
     transition: ease-in-out .3s;
-    color: rgba(255, 255, 255, 0);
+    opacity: 0;
 }
 
 .main-title{
@@ -118,6 +118,8 @@ body{
     /* left:5%; */
     left: 50%;
     transform: translate(-50%,0);
+    border-width: 10px;
+    border-color: black;
 }
 
 .upcoming-title{
